--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/modulevault
-NODE_ENV=local
+
+# Logging configuration
+LOG_LEVEL=info
+NODE_ENV=development
