--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "LOG_LEVEL=debug NODE_ENV=development node server.js",
+    "start:prod": "LOG_LEVEL=info NODE_ENV=production node server.js",
+    "logs:clean": "rm -rf logs/*.log",
+    "logs:tail": "tail -f logs/$(date +'%Y-%m-%d')-combined.log | grep -v '\"level\":\"debug\"'"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "graphql": "^16.11.0",
     "mongoose": "^8.3.5",
+    "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
